[gd_scene load_steps=3 format=3 uid="uid://bmhu278fpfqw8"]

[ext_resource type="Script" path="res://scenes/powerup/timer/powerup_timer.gd" id="1_g1k83"]
[ext_resource type="AudioStream" uid="uid://c4ht0cpgx31nk" path="res://assets/sounds/1_up_collect.wav" id="2_w0yxp"]

[node name="PowerupTimer" type="Timer"]
script = ExtResource("1_g1k83")

[node name="1UpCollect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_w0yxp")

[connection signal="timeout" from="." to="." method="_on_timeout"]
